# openenv-clinical-review

./: .huggingface.yaml  Dockerfile  README.md  app.py  baseline_results.json  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_local.py
baseline/: run_baseline.py
clinical_trial_review/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
clinical_trial_review/server/: Dockerfile  __init__.py  app.py  clinical_trial_review_environment.py
env/: __init__.py  environment.py
graders/: __init__.py  graders.py
server/: app.py  environment.py  models.py  protocols.py
tests/: test_environment.py
