[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical_trial_review"
version = "1.0.0"
description = "Clinical Trial Protocol Review OpenEnv Environment"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "openai>=1.40.0",
    "pyyaml==6.0.2",
    "httpx==0.27.0",
    "python-multipart==0.0.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "graders*"]